[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menu.gd" type="Script" id=1]

[node name="Control" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 140.0
margin_top = 17.0
margin_right = 340.0
margin_bottom = 253.0
rect_min_size = Vector2( 200, 0 )

[node name="HostLabel" type="Label" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Host"

[node name="HostPort" type="SpinBox" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 42.0
min_value = 1.0
max_value = 65535.0
value = 3000.0

[node name="HostMaxPlayers" type="SpinBox" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 200.0
margin_bottom = 70.0
value = 8.0

[node name="HostBtn" type="Button" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 200.0
margin_bottom = 94.0
text = "Host"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 200.0
margin_bottom = 138.0
custom_constants/separation = 40

[node name="JoinLabel" type="Label" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 200.0
margin_bottom = 156.0
text = "Join"

[node name="JoinIp" type="LineEdit" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 200.0
margin_bottom = 184.0
text = "localhost"

[node name="JoinPort" type="SpinBox" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 200.0
margin_bottom = 212.0
min_value = 1.0
max_value = 65535.0
value = 3000.0

[node name="JoinBtn" type="Button" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 200.0
margin_bottom = 236.0
text = "Join"

[connection signal="pressed" from="VBoxContainer/HostBtn" to="." method="on_host"]
[connection signal="pressed" from="VBoxContainer/JoinBtn" to="." method="on_join"]
